--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-scrollable-feed": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
