--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.1",
-    "react-scrollable-feed": "^2.0.2"
+    "react-scrollable-feed": "^2.0.2",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
